# laipinyin

./: .gitignore  NEWS  README.md  SConstruct  TODO  laipinyin-2.0.pc.in
debian/: README.Debian  changelog  control.in  copyright  laipinyin-data-le.install  liblaipinyin3.install  rules  watch
doc/: README.in  SLM-inst.mk.in
man/: genpyt.pod  getwordfreq.pod  mmseg.pod  slmpack.pod  slmseg.pod  tslmendian.pod
python/: setup.py
python/importer/: import_fcitx_userdict.py  import_fit_userdict.py  import_google_userdict.py  import_qim_userdict.py  import_qq_userdict.py  import_sogou_celldict.py  import_sogou_userdict.py  import_ziguang_userdict.py  importer.py
src/: SConscript  laipinyin-dictgen.mk.in  laipinyin.h
src/ime-core/: ic_history.h  imi_glibHandler.h  imi_keys.h  imi_options.cpp  imi_options.h  imi_plugin.cpp  imi_plugin.h  imi_uiobjects.h  imi_winHandler.h
src/lexicon/: pytrie.h  pytrie_gen.h  trie_writer.h
src/pinyin/: syllable.h
wrapper/gtk_standalone/: SConstruct  imi_gtkwin.h  laipinyin.cpp
wrapper/ibus/: .gitignore  CMakeLists.txt  README  SConstruct
wrapper/ibus/src/: CMakeLists.txt  debug.h  engine.cpp  engine.h  imi_ibus_win.cpp  imi_ibus_win.h  laipinyin_config.cpp  laipinyin_config.h  laipinyin_config_keys.h  laipinyin_engine.cpp  laipinyin_engine.h  laipinyin_engine_proxy.cpp  laipinyin_engine_proxy.h  laipinyin_lookup_table.cpp  laipinyin_lookup_table.h  laipinyin_property.cpp  laipinyin_property.h  main.cpp
wrapper/macos/: .gitignore  Info.plist  LaiPinyinApplicationDelegate.h  LaiPinyinApplicationDelegate.mm  Makefile  main.m  (+5 more)
(+62 files in other folders)
